# datahugger

./: .datacite_coverage.json  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  DEVELOPMENT.md  README.md  doihugsdata_repo.ai  index.html  mkdocs.yml  pyproject.toml  repos_benchmark.csv  repos_benchmark_tested.csv  repositories.md  script_get_netlocs.py  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: request-support-for-data-repository.md
.github/workflows/: benchmark.yml  gh-pages.yml  python-package.yml
benchmark/: benchmark_datasets.csv  benchmark_datasets_tested.csv  requirements.txt
benchmark/datacite/: datacite_random_2023-09-09 19:50:09.895409  datacite_random_2023-09-09 19:51:53.749622  datacite_random_2023-09-09 19:53:17.555568  datacite_random_2023-09-09 19:54:11.548189  datacite_random_2023-09-09 19:55:22.344489  datacite_random_2023-09-22 15:08:14.671803  datacite_random_2023-09-22 15:09:51.750972  datacite_random_2023-09-22 15:13:19.880036  datacite_random_2023-09-22 15:17:32.340289  datacite_random_2023-09-22 15:18:33.764814  datacite_random_2023-09-23 17:38:21.476567  datacite_random_2023-09-23 17:40:47.951858  datacite_random_2023-09-23 17:41:30.186160  datacite_random_2023-09-23 17:41:48.535194  datacite_random_2023-09-23 17:42:11.178520  datacite_random_2023-09-23 17:42:31.060419  datacite_random_2023-09-23 17:42:51.695756  datacite_random_2023-09-23 17:43:10.442908  datacite_random_2023-09-23 17:43:30.954559  datacite_random_2023-09-23 17:44:07.560291
datahugger/: __init__.py  __main__.py  api.py  base.py  config.py  deprecated.py  exceptions.py  handles.py  metadata.py  resolvers.py  services.py  utils.py
development/: index.html
docs/: development.md  download.md  faq.md  getting_started.md  index.md  installation.md  object.md  options.md  repositories.md  repositories_not_supported.md  reproducible.md  working.md
docs/stylesheets/: extra.css
download/: index.html
examples/: example_datahugger_in_workflow.ipynb
faq/: index.html
images/: datahugger_architecture.drawio  logos.ai
installation/: index.html
object/: index.html
options/: index.html
repositories/: index.html
repositories_not_supported/: index.html
reproducible/: index.html
scripts/: datacite_clients.py  estimate_repos_supported.py  repo_coverage.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_dataset_result.py  test_repositories.py  test_repositories.toml  test_repositories_plus.py  test_resolver.py  test_utils.py
working/: index.html
