[project]
name = "datahugger"
description = "One downloader for many scientific data and code repositories!"
authors = [
    { name = "Jonathan de Bruin", email = "jonathandebruinos@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
license = {text = "MIT"}
dependencies = ["jsonpath_ng", "requests", "requests-cache", "scitree", "tqdm"]
dynamic = ["version"]
requires-python = ">=3.6"

[project.scripts]
datahugger = "datahugger.__main__:main"

[project.optional-dependencies]
all = ["datasets"]
lint = ["ruff", "black", "jupyter-black"]
test = ["pytest"]
docs = ["mkdocs-material"]

[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.setuptools]
packages = ["datahugger"]

[tool.setuptools_scm]
write_to = "datahugger/_version.py"

[tool.ruff]
select = ["E", "F", "UP", "I", "B"]

[tool.ruff.isort]
force-single-line = true
